slimmed types